--- a/assets/raw.scss
+++ b/assets/raw.scss
@@ -62,9 +62,6 @@ footer {
   img {
     max-width: 40%;
     position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
   }
   h1 {
     animation-delay: 1s;
